--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,15 +7,13 @@ nginx:
 
 mariadb:
   image: mariadb
-  volumes:
-    - ./data:/var/data
   volumes_from:
     - dbdata
   environment:
     MYSQL_ROOT_PASSWORD: "mypass"
     MYSQL_DATABASE: "wpdb"
 #  volumes:
-#    - ./data/sql:/docker-entrypoint-initdb.d # put your sql dump file(s) in the data/sql directory and the database will be initialzed with it
+#    - ./data/sql:/docker-entrypoint-initdb.d #Put your sql dump file(s) in the data/sql directory and the database will be initialzed with it
   ports:
     - "3306:3306"
 
@@ -28,7 +26,6 @@ dbdata:  # Used to store the database files
 
 wp: # the wp container
   image: ocasta/nginx-hhvm-for-wp:4.4
-
   environment:
     - VIRTUAL_HOST=docker.local
   links:
@@ -39,8 +36,7 @@ wp: # the wp container
     - ./hhvm/:/etc/hhvm/
 #    - ./my-theme:/var/www/public_html/web/app/themes/my-theme
 #    - ./my-plugin:/var/www/public_html/web/app/themes/my-plugin
-#    - ./environments/development.php:/var/www/public_html/config/environments/development.php
-
+#    - ./environments/development.php:/var/www/public_html/config/environments/development.php #only uncomment this line if you have added a config
   expose:
     - "80"
   ports: # for xdebug
